tests/transpiler/x/scheme/string_prefix_slice.scm
;; Generated by Mochi transpiler on 2025-07-19T11:53:37Z
(import (srfi 1))
(define prefix "fore")
(define s1 "forest")
(display (if (= (if (string? s1) (substring s1 0 (length prefix)) (take (drop s1 0) (- (length prefix) 0))) prefix) 1 0))
(newline)
(define s2 "desert")
(display (if (= (if (string? s2) (substring s2 0 (length prefix)) (take (drop s2 0) (- (length prefix) 0))) prefix) 1 0))
(newline)
